// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`with license issues 1`] = `
"

Issues to fix by upgrading:

  Upgrade rack@1.6.5 to rack@1.6.11 to fix
  ✗ Cross-site Scripting (XSS) [Medium Severity][http://banana:8000/vuln/SNYK-RUBY-RACK-72567] in rack@1.6.5
    introduced by:
    rack@1.6.5
    rack-cache@1.1 > rack@1.6.5
    rack-protection@1.5.3 > rack@1.6.5

  Upgrade rack-cache@1.1 to rack-cache@1.3.0 to fix
  ✗ Cross-site Scripting (XSS) [Medium Severity][http://banana:8000/vuln/SNYK-RUBY-RACK-72567] in rack@1.6.5
    introduced by:
    rack@1.6.5
    rack-cache@1.1 > rack@1.6.5
    rack-protection@1.5.3 > rack@1.6.5
  ✗ HTTP Header Caching Weakness [High Severity][http://banana:8000/vuln/SNYK-RUBY-RACKCACHE-20031] in rack-cache@1.1
    introduced by:
    rack-cache@1.1

  Upgrade rack-protection@1.5.3 to rack-protection@2.0.0 to fix
  ✗ Side-channel attack [Low Severity][http://banana:8000/vuln/SNYK-RUBY-RACKPROTECTION-20394] in rack-protection@1.5.3
    introduced by:
    rack-protection@1.5.3
  ✗ Timing Attack [Medium Severity][http://banana:8000/vuln/SNYK-RUBY-RACKPROTECTION-20395] in rack-protection@1.5.3
    introduced by:
    rack-protection@1.5.3
  ✗ Directory Traversal [Medium Severity][http://banana:8000/vuln/SNYK-RUBY-RACKPROTECTION-22019] in rack-protection@1.5.3
    introduced by:
    rack-protection@1.5.3
  ✗ Cross-site Scripting (XSS) [Medium Severity][http://banana:8000/vuln/SNYK-RUBY-RACK-72567] in rack@1.6.5
    introduced by:
    rack@1.6.5
    rack-cache@1.1 > rack@1.6.5
    rack-protection@1.5.3 > rack@1.6.5

License issues:

  ✗ Unknown license [High Severity][http://banana:8000/vuln/snyk:lic:rubygems:rack-cache:Unknown] in rack-cache@1.1
    introduced by:
    rack-cache@1.1
    Legal instructions:
    ○ for LGPL-3.0 license: I am legal license instruction"
`;

exports[`with pins & unfixable & showVulnsPaths = all 1`] = `
"

Issues to fix by upgrading dependencies:

  Upgrade django@1.6.1 to django@2.2.18 to fix
  ✗ Content Spoofing [Medium Severity][http://banana:8000/vuln/SNYK-PYTHON-DJANGO-72888] in django@1.6.1
    introduced by:
    django@1.6.1

Issues with no direct upgrade or patch:
  ✗ Directory Traversal [Low Severity][http://banana:8000/vuln/SNYK-PYTHON-DJANGO-1066259] in django@1.6.1
    introduced by:
    django@1.6.1
  This issue was fixed in versions: 2.2.18, 3.0.12, 3.1.6"
`;

exports[`with reachable info 1`] = `
"

Issues to fix by upgrading:

  Upgrade package-name@1.6.1 to package-name@1.6.3 to fix
  ✗ Arbitrary Code Execution [Medium Severity][Reachable][http://banana:8000/vuln/SNYK-JAVA-PACAKGE-12345] in package-name@1.6.1
    introduced by:
    package-name@1.6.1"
`;

exports[`with showVulnPaths = some 1`] = `
"

Issues to fix by upgrading dependencies:

  Upgrade django@1.6.1 to django@2.2.18 to fix
  ✗ Content Spoofing [Medium Severity][http://banana:8000/vuln/SNYK-PYTHON-DJANGO-72888] in django@1.6.1
    introduced by django@1.6.1

Issues with no direct upgrade or patch:
  ✗ Directory Traversal [Low Severity][http://banana:8000/vuln/SNYK-PYTHON-DJANGO-1066259] in django@1.6.1
    introduced by django@1.6.1
  This issue was fixed in versions: 2.2.18, 3.0.12, 3.1.6"
`;

exports[`with upgrades & patches 1`] = `
"

Issues to fix by upgrading:

  Upgrade qs@0.0.6 to qs@6.0.4 to fix
  ✗ Prototype Override Protection Bypass [Low Severity (originally High)][http://banana:8000/vuln/npm:qs:20170213] in qs@0.0.6
    introduced by:
    qs@0.0.6
  ✗ Denial of Service (DoS) [Low Severity (originally High)][http://banana:8000/vuln/npm:qs:20140806] in qs@0.0.6
    introduced by:
    qs@0.0.6
  ✗ Denial of Service (DoS) [Low Severity (originally Medium)][http://banana:8000/vuln/npm:qs:20140806-1] in qs@0.0.6
    introduced by:
    qs@0.0.6

Patchable issues:

  Patch available for node-uuid@1.4.0
  ✗ Insecure Randomness [Low Severity (originally Medium)][http://banana:8000/vuln/npm:node-uuid:20160328] in node-uuid@1.4.0
    introduced by:
    node-uuid@1.4.0"
`;
